# pyticktick

./: .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  LICENSE  README.md  openapi.conf  openapi.yaml  project.yaml  pyproject.toml  setup.py  task.yaml  testit.py  tox.ini
.github/workflows/: python.yml
.openapi-generator/: FILES
docs/: ChecklistItem.md  Column.md  DefaultApi.md  OauthTokenPost200Response.md  OauthTokenPostRequest.md  OpenV1ProjectProjectIdPostRequest.md  OpenV1ProjectProjectIdTaskTaskIdCompletePostRequest.md  OpenV1TaskTaskIdPostRequest.md  Project.md  ProjectData.md  Status.md  Task.md
pyticktick/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
pyticktick/api/: __init__.py  default_api.py
pyticktick/models/: __init__.py  checklist_item.py  column.py  oauth_token_post200_response.py  oauth_token_post_request.py  open_v1_project_project_id_post_request.py  open_v1_project_project_id_task_task_id_complete_post_request.py  open_v1_task_task_id_post_request.py  project.py  project_data.py  status.py  task.py
pyticktick/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
pyticktick/openapi_client/api/: __init__.py  default_api.py
pyticktick/openapi_client/models/: __init__.py  checklist_item.py  oauth_token_post200_response.py  oauth_token_post_request.py  open_v1_project_project_id_post_request.py  open_v1_project_project_id_task_task_id_complete_post_request.py  open_v1_task_task_id_post_request.py  project.py  project_data.py  task.py
pyticktick/test/: test_checklist_item.py  test_column.py  test_default_api.py  test_oauth_token_post200_response.py  test_oauth_token_post_request.py  test_open_v1_project_project_id_post_request.py  test_open_v1_project_project_id_task_task_id_complete_post_request.py  test_open_v1_task_task_id_post_request.py  test_project.py  test_project_data.py  test_status.py  test_task.py
test/: test_checklist_item.py  test_column.py  test_default_api.py  test_oauth_token_post200_response.py  test_oauth_token_post_request.py  test_open_v1_project_project_id_post_request.py  test_open_v1_project_project_id_task_task_id_complete_post_request.py  test_open_v1_task_task_id_post_request.py  test_project.py  test_project_data.py  test_status.py  test_task.py
