[tool.poetry]
name = "pyticktick.openapi_client"
version = "1.0.0"
description = "TickTick API"
authors = ["OpenAPI Generator Community <team@openapitools.org>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "TickTick API"]
include = ["pyticktick.openapi_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[project.scripts]
generate-api = "scripts.generate_api:main"

[tool.hatch.envs.default]
dependencies = ["openapi-python-client", ]

[tool.hatch.envs.default.scripts]
generate = "openapi-python-client generate --path openapi.yaml --output-path ./pyticktick"
build-with-api = [
    "generate",
    "hatch build"
]
