[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyticktick.openapi-client"
version = "1.0.0"
description = "TickTick API"
readme = "README.md"
authors = [
    { name = "OpenAPI Generator community", email = "team@openapitools.org" }
]
license = { text = "NoLicense" }
requires-python = ">=3.8"
keywords = ["OpenAPI", "OpenAPI-Generator", "TickTick API"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "urllib3 >= 1.25.3, < 2.1.0",
    "python-dateutil",
    "aiohttp >= 3.0.0",
    "pydantic >= 1.10.5, < 2",
    "aenum"
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.2.1",
    "tox >= 3.9.0",
    "ruff",
    "hatch"
]
test = [
    "pytest >= 7.2.1",
]

[project.urls]
Repository = "https://github.com/konikvranik/pyticktick"

[tool.hatch.version]
path = "pyticktick/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pyticktick"]

[tool.hatch.build.targets.wheel.sources]
"pyticktick" = "pyticktick"

[tool.hatch.build.targets.sdist]
include = [
    "pyticktick",
    "README.md"
]

#[tool.hatch.build.targets.wheel.force-include]
#"pyticktick.openapi_client/py.typed" = "pyticktick.openapi_client/py.typed"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[project.scripts]
generate-api = "scripts.generate_api:main"

[tool.hatch.envs.default]
dependencies = ["openapi-generator-cli>=7.0.0", ]

[tool.hatch.envs.default.scripts]
generate = "openapi-generator-cli generate -i openapi.yaml -g python-pydantic-v1 -o . --global-property=models,apis,supportingFiles --additional-properties=packageName=pyticktick,generateSourceCodeOnly=true,library=asyncio,readmeFilename=README.md,disallowAdditionalPropertiesIfNotPresent=false,hideGenerationTimestamp=true,projectName='TickTick API',projectDescription='[TickTick](https://ticktick.com/) TODO task manager.'; ruff check --fix ."
openapi = "openapi-generator-cli {args}"
build-with-api = [
    "generate",
    "hatch build"
]

[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "./pyticktick/models/",
    "./pyticktick/apis/",
    "./pyticktick/openapi_client/",
]

[tool.ruff.lint.per-file-ignores]
"pyticktick/api_client.py" = ["E721"]
